internal browser window, stop/start player

--- a/WindowsFormsApplication1/StartSqueeze/Properties/Settings.settings
+++ b/WindowsFormsApplication1/StartSqueeze/Properties/Settings.settings
@@ -11,5 +11,11 @@
     <Setting Name="Autostart" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="Width" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="Height" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
