--- a/WindowsFormsApplication1/StartSqueeze/app.config
+++ b/WindowsFormsApplication1/StartSqueeze/app.config
@@ -17,6 +17,12 @@
             <setting name="Autostart" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Width" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="Height" serializeAs="String">
+                <value>0</value>
+            </setting>
         </StartSqueeze.Properties.Settings>
         <WindowsFormsApplication1.Properties.Settings>
             <setting name="Server" serializeAs="String">
